# ykdf

./: .editorconfig  .gitignore  .gitleaks.toml  .gitleaksignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  _typos.toml  deny.toml  osv-scanner.toml
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/rulesets/: protect-tags.json
.github/workflows/: ci.yml  codeql.yml  commit-lint.yml  dco.yml  release.yml  scorecard.yml
apps/android/: .gitignore  README.md  build-native.sh  build.gradle.kts  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/app/ykdf/: Brand.kt  MainActivity.kt  Native.kt
apps/android/app/src/main/java/app/ykdf/nfc/: Apdu.kt  YubiKeyNfc.kt
apps/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
apps/cli/: Cargo.toml
apps/cli/src/: cli.rs  clone.rs  derive.rs  error.rs  format.rs  ikm.rs  init.rs  main.rs  recipe.rs  sign.rs  term.rs  wg.rs
crates/ykdf-config/: Cargo.toml
crates/ykdf-config/src/: lib.rs
crates/ykdf-core/: Cargo.toml
crates/ykdf-core/src/: context.rs  derive.rs  error.rs  format.rs  lib.rs  pipeline.rs  sign.rs  stretch.rs  types.rs
crates/ykdf-core/src/expand/: hkdf.rs  mod.rs  sponge.rs
crates/ykdf-core/src/extract/: hkdf.rs  mod.rs  sponge.rs
crates/ykdf-core/src/profile/: age.rs  ed25519.rs  mldsa.rs  mlkem.rs  mod.rs  raw.rs  symmetric.rs  x25519.rs
crates/ykdf-core/tests/: format_invariants.rs  miri_core.rs  pipeline.rs  properties.rs  sshsig_interop.rs  vectors.rs
crates/ykdf-jni/: Cargo.toml
crates/ykdf-jni/src/: lib.rs
crates/ykdf-yubikey/: Cargo.toml
crates/ykdf-yubikey/src/: error.rs  hmac.rs  lib.rs  piv.rs  provision.rs  scd.rs
docs/: README.md  SPEC.md  android-spike.md  assurance-case.md  design.md  hardware-acceptance.md  ideas.md  provisioning.md  signatures.md  transport-notes.md  usage.md  verifying-releases.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: context_parse.rs  derive_raw.rs  ikm_extract.rs
references/: README.md
references/c/: Makefile  README.md
references/c/include/: ykdf.h
references/c/src/: bech32.c  bech32.h  pqc.c  ykdf.c
references/c/test/: conformance.c  gen_vectors.py
references/go/: README.md  go.mod  go.sum
references/go/ykdf/: bech32.go  pipeline.go  profile.go  roundtrip_test.go  vectors_test.go  ykdf.go
scripts/: check-all.sh  check-code-quality.sh  check-supply-chain.sh  check-workflows.sh  hw-acceptance.sh
timing/: Cargo.toml  README.md
timing/src/: main.rs
vectors/: v1.json
