[workspace]
resolver = "3"
members = [
  "crates/ykdf-core",
  "crates/ykdf-yubikey",
  "apps/cli",
]
# The fuzz and timing crates are manual tools with their own workspaces (fuzz
# needs nightly; timing pulls dudect-bencher); keep them out of the stable build.
exclude = ["fuzz", "timing"]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/ICreateThunder/ykdf"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
argon2 = "0.5"
derive_more = { version = "2", features = ["from"] }
zeroize = { version = "1", features = ["derive"] }
hmac = "0.13"
sha2 = "0.11"
sha3 = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "2"
ml-kem = "0.3"
bech32 = "0.12"
yubikey = { version = "0.8", features = ["untested"] }
yubikey-hmac-otp = "0.10"
p256 = "0.13"
