[package]
name = "ykdf-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
ykdf-core = { path = "../crates/ykdf-core" }

[[bin]]
name = "context_parse"
path = "fuzz_targets/context_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ikm_extract"
path = "fuzz_targets/ikm_extract.rs"
test = false
doc = false
bench = false

[[bin]]
name = "derive_raw"
path = "fuzz_targets/derive_raw.rs"
test = false
doc = false
bench = false

# Detach from the main workspace: cargo-fuzz needs nightly and must not be
# part of the stable workspace build.
[workspace]
