[package]
name = "ykdf"
description = "YubiKey key derivation CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "ykdf"
path = "src/main.rs"

[dependencies]
ykdf-core = { path = "../../crates/ykdf-core", version = "0.1.0" }
ykdf-yubikey = { path = "../../crates/ykdf-yubikey", version = "0.1.0" }
