[package]
name = "ykdf"
description = "YubiKey key derivation CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "ykdf"
path = "src/main.rs"

[dependencies]
ykdf-core = { path = "../../crates/ykdf-core", version = "0.2.0", features = ["argon2"] }
ykdf-yubikey = { path = "../../crates/ykdf-yubikey", version = "0.2.0" }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
hex = "0.4"
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
bech32.workspace = true
rpassword = "7"
zeroize.workspace = true
