[package]
name = "ykdf-core"
description = "Platform-independent key derivation logic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
argon2 = ["dep:argon2"]

[dependencies]
argon2 = { workspace = true, optional = true }
zeroize.workspace = true
hmac.workspace = true
sha2.workspace = true
sha3.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
ml-kem.workspace = true
bech32.workspace = true
