[package]
name = "ykdf-core"
description = "Platform-independent key derivation logic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
argon2 = ["dep:argon2"]

[dependencies]
argon2 = { workspace = true, optional = true }
zeroize.workspace = true
hmac.workspace = true
sha2.workspace = true
sha3.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
ml-kem.workspace = true
ml-dsa.workspace = true
bech32.workspace = true

[dev-dependencies]
hex = "0.4.3"
hkdf = "0.13.0"
proptest = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
