[package]
name = "ykdf-core"
description = "Platform-independent key derivation logic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
argon2 = ["dep:argon2"]
# Public-key/output formatting (base64, OpenSSH, bech32 age). Off by default so
# the minimal core stays lean; the CLI and JNI enable it.
format = ["dep:base64"]

[dependencies]
argon2 = { workspace = true, optional = true }
base64 = { version = "0.22", optional = true }
zeroize.workspace = true
hmac.workspace = true
sha2.workspace = true
sha3.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
ml-kem.workspace = true
ml-dsa.workspace = true
bech32.workspace = true

# ml-dsa pulls getrandom 0.4, which refuses to build for wasm32-unknown-unknown
# unless a backend is selected. We only use deterministic (seed-based) keygen, so
# the RNG is never called at runtime; enabling wasm_js just lets it compile.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
hex = "0.4.3"
hkdf = "0.13.0"
proptest = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
