[package]
name = "ykdf-yubikey"
description = "YubiKey interaction layer for PIV and HMAC operations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[dependencies]
derive_more.workspace = true
zeroize.workspace = true
