[package]
name = "ykdf-yubikey"
description = "YubiKey interaction layer for PIV and HMAC operations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[dependencies]
ykdf-core = { path = "../ykdf-core", version = "0.1.0" }
yubikey.workspace = true
yubikey-hmac-otp.workspace = true
p256.workspace = true
x509-cert = "0.2"
getrandom = "0.2"
zeroize.workspace = true
