[package]
name = "ykdf-yubikey"
description = "YubiKey interaction layer for PIV and HMAC operations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[dependencies]
ykdf-core = { path = "../ykdf-core", version = "0.2.0" }
yubikey.workspace = true
# Named directly (already pulled transitively by yubikey) so the open path can
# distinguish a PC/SC sharing violation, i.e. a reader held by scdaemon.
pcsc = "2.9"
p256.workspace = true
x509-cert = "0.2"
getrandom = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
